--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-<!--My File-->
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Brayden's Awesome Website</title>
+    </head>
+    <style>
+        body {
+            background: rgb(25, 50, 100);
+            color: rgb(45, 45, 45);
+            padding: 10px;
+            font-family: arial;
+        }
+        #all-contents {
+            max-width: 800px;
+            margin: auto;
+        }
+
+        /* navigation menu */
+        nav {
+            background: rgb(02, 11, 04);
+            margin: 0 auto;
+            display: flex;
+            padding: 10px;
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+        h1 {
+            display: flex;
+            align-items: center;
+            color: white;
+            flex: 1;
+            margin: 0;
+        }
+        #nav-ul {
+            list-style-image: none;
+        }
+        .nav-li {
+            display: inline-block;
+            padding: 0 10px;
+        }
+        a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        /* main character area beneath menu */
+        main {
+            background: rgb(245, 238, 219);
+            display: flex;
+        }
+        .sidebar {
+            margin-right: 25px;
+            padding: 10px;
+        }
+        .sidebar-img {
+            width: 200px;
+        }
+        .content {
+            flex: 1;
+            padding: 15px;
+        }
+        #interests {
+            border: 4px silver ridge;
+            padding: 8px;
+        }
+        h2, h3 {
+            margin: 0px;
+        }
+    </style>
+
+    <body>
+        <!--All content goes here -->
+        <div id="all contents">
+
+        </div>
+    </body>
+            <nav>
+                <h1>Brayden's Awesome Website</h1>
+                <ul id="nav-ul">
+
+                </ul>
+                    <li class="nav-li">
+
+                    </li>
+                        <a href="index.html"> Home </a>
+                    </li>
+                    <li class="nav-li">
+
+                    </li>
+                        <a href="portfolio.html"> Portfolio </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <main>
+                <!-- Sidebar section -->
+               <div class="sidebar"
+                <img class= "sidebar-img" src="https://img.freepik.com/premium-vector/modern-flat-design-gamepad-joystick-icon-web-simple-style_599062-233.jpg">
+               </div> 
+
+               <!-- Content section -->
+               <div class="content"
+                <h2></h2>
+                <p></p>
+                <!-- Interests section -->
+                <div id="interests"
+                    <h3>Interests</h3>
+                    <ul>
+                        <li>Video Games</li>
+                        <li>Cookie Cake</li>
+                        <li>Working Out</li>
+                    </ul>
+                </div>
+               </div>
+            </main>
+        </div>
+    </body>
+</html>
