--- a/index.html
+++ b/index.html
@@ -2,117 +2,110 @@
 <html>
     <head>
         <title>Brayden's Awesome Website</title>
+        <style>
+            body {
+                background: #123456;
+                color: #000000;
+                padding: 10px;
+                font-family: arial;
+            }
+            #all-contents {
+              max-width: 800px;
+                margin: auto;
+            }
+         
+            /* navigation menu */
+            nav {
+                background: #123456;
+               margin: 0 auto;
+               margin-bottom: 20px;
+                display: flex;
+                padding: 10px;
+            }
+            h1 {
+                display: flex;
+                align-items: center;
+                color: white;
+                flex: 1;
+                margin: 0;
+            }
+            #nav-ul {
+                list-style-image: none;
+            }
+            .nav-li {
+                display: inline-block;
+                padding: 0 10px;
+            }
+            a {
+                text-decoration: none;
+                color: #fff;
+            }
+         
+            /* main container area beneath menu */
+            main {
+                background: #ffffff;
+                display: flex;
+            }
+            .sidebar {
+                margin-right: 25px;
+                padding: 10px;
+            }
+            .sidebar-img {
+                width: 200px;
+            }
+            .content {
+                flex: 1;
+                padding: 15px;
+            }
+            #interests {
+                border: 4px silver ridge;
+                padding: 8px;
+            }
+            h2, h3 {
+                margin: 0px;
+            }
+         </style>
     </head>
-    <style>
-        body {
-            background: rgb(25, 50, 100);
-            color: rgb(45, 45, 45);
-            padding: 10px;
-            font-family: arial;
-        }
-        #all-contents {
-            max-width: 800px;
-            margin: auto;
-        }
-
-        /* navigation menu */
-        nav {
-            background: rgb(02, 11, 04);
-            margin: 0 auto;
-            display: flex;
-            padding: 10px;
-            margin: 0 auto;
-            margin-bottom: 20px;
-        }
-        h1 {
-            display: flex;
-            align-items: center;
-            color: white;
-            flex: 1;
-            margin: 0;
-        }
-        #nav-ul {
-            list-style-image: none;
-        }
-        .nav-li {
-            display: inline-block;
-            padding: 0 10px;
-        }
-        a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        /* main character area beneath menu */
-        main {
-            background: rgb(245, 238, 219);
-            display: flex;
-        }
-        .sidebar {
-            margin-right: 25px;
-            padding: 10px;
-        }
-        .sidebar-img {
-            width: 200px;
-        }
-        .content {
-            flex: 1;
-            padding: 15px;
-        }
-        #interests {
-            border: 4px silver ridge;
-            padding: 8px;
-        }
-        h2, h3 {
-            margin: 0px;
-        }
-    </style>
 
     <body>
-        <!--All content goes here -->
-        <div id="all contents">
-
-        </div>
+        <!-- Visible HTML elements GO HERE -->
     </body>
-            <nav>
-                <h1>Brayden's Awesome Website</h1>
-                <ul id="nav-ul">
+</html>
+<body>
+    <!-- All content goes here -->
+    <div id="all-contents">
+        <nav>
+            <h1>Brayden's Awesome Website</h1>
+            <ul id="nav-ul">
+                <li class="nav-li">
+                    <a href="index.html"> Home </a>
+                </li>
+                <li class="nav-li">
+                    <a href="portfolio.html"> Portfolio </a>
+                </li>
+            </ul>
+        </nav>
 
-                </ul>
-                    <li class="nav-li">
+        <main>
+            <!-- Sidebar section -->
+            <div class="sidebar">
+            <img class="sidebar-img"src="https://cdn1.iconfinder.com/data/icons/viiva-ps4-controller-buttons/32/square_button-512.png"
+            </div>
 
-                    </li>
-                        <a href="index.html"> Home </a>
-                    </li>
-                    <li class="nav-li">
-
-                    </li>
-                        <a href="portfolio.html"> Portfolio </a>
-                    </li>
-                </ul>
-            </nav>
-
-            <main>
-                <!-- Sidebar section -->
-               <div class="sidebar"
-                <img class= "sidebar-img" src="https://img.freepik.com/premium-vector/modern-flat-design-gamepad-joystick-icon-web-simple-style_599062-233.jpg">
-               </div> 
-
-               <!-- Content section -->
-               <div class="content"
-                <h2></h2>
-                <p></p>
+            <!-- Content section -->
+            <div class="content">
+                <h2>Brayden Danna</h2>
+                <p>Student at Mandeville High School</p>
                 <!-- Interests section -->
-                <div id="interests"
+                <div id="interests">
                     <h3>Interests</h3>
                     <ul>
                         <li>Video Games</li>
-                        <li>Cookie Cake</li>
-                        <li>Working Out</li>
+                        <li>Nature</li>
+                        <li>Family and Friends</li>
                     </ul>
                 </div>
-               </div>
-            </main>
-        </div>
-    </body>
-</html>
+            </div>
+        </main>
+    </div>
+</body>
