add index.html file

--- a/index.html
+++ b/index.html
@@ -67,10 +67,6 @@
          </style>
     </head>
 
-    <body>
-        <!-- Visible HTML elements GO HERE -->
-    </body>
-</html>
 <body>
     <!-- All content goes here -->
     <div id="all-contents">
@@ -89,7 +85,7 @@
         <main>
             <!-- Sidebar section -->
             <div class="sidebar">
-            <img class="sidebar-img"src="https://cdn1.iconfinder.com/data/icons/viiva-ps4-controller-buttons/32/square_button-512.png"
+            <img class="sidebar-img"src="https://cdn1.iconfinder.com/data/icons/viiva-ps4-controller-buttons/32/square_button-512.png">
             </div>
 
             <!-- Content section -->
@@ -109,3 +105,4 @@
         </main>
     </div>
 </body>
+</html>
