--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,10 @@
       <div id="all-contents">
             <nav>
                 <h1>Brayden's Awesome Website</h1>
-                <ul id="nav.ul">
-                    <li class="nav.li">
+                <ul id="nav-ul">
+                    <li class="nav-li">
+                        <li class="nav-li">
+                            <a class="nav-a" href="portfolio.html">Portfolio</a>
                         <a class="nav-a" href="index.html">Home</a>
                     </li>
                 </ul>
